# CppParser-aghacks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aghacks  cmake_install.cmake  functions.cpp  functions.h  getpage.py  main.cpp  python_scraper.cpp  python_scraper.h  sql_manager.cpp  sql_manager.h  sql_model.cpp  sql_model.h
Parser/: Pattern1.cpp  Pattern1.h  ai_parser.cpp  ai_parser.h  alltags.txt  base_text.cpp  base_text.h  keywords.txt  meal_data.cpp  meal_data.h  parser.h  pattern1.cpp  pattern1.h  relevanttags.txt
